# place-remember

./: .gitignore  README.md  env.example  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/place_remember/: forms.py  models.py  urls.py  views.py
app/place_remember/migrations/: 0001_initial.py
app/place_remember/services/: services.py
app/place_remember/static/place_remember/css/: style.css
app/place_remember/static/place_remember/js/: main.js
app/templates/: base.html
app/templates/account/: logout.html
app/templates/place_remember/: add_memory.html  index.html
app/templates/socialaccount/: login.html
